--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(bridges)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(bridges main.cpp graph.h algorithms.h benchmark.h sorts.h tests.h reader.h FL_SSSP.h benchmark_shortest_paths.h)
+add_executable(bridges main.cpp graph.h algorithms.h benchmark.h sorts.h tests.h reader.h FL_SSSP.h benchmark_shortest_paths.h tests_shortest_paths.h a_star.h)
